--- a/templates/add-blog.html
+++ b/templates/add-blog.html
@@ -4,15 +4,31 @@
 }
 .box{
     background-color: yellowgreen;
+    width: 500px;
+    display: flex;
+    
+    flex-direction: column;
+    margin-left: 200px;
+
+
+
 }
 label{
     color: aliceblue;
 }
+/* body{
+    width: 500px;
+    display: flex;
+    margin-left: 200px;
+    /* justify-content: center;
+ } */
+
+*/
 </style>
 
 {%extends 'home.html'%}
 {%block content%}
-<div class="box">
+<div class="box" style="display: flex; justify-content: center;">
 <h1 class="hed1">Add Blogs</h1>
 <form class="f1" action="" method="POST" enctype="multipart/form-data">
     {%csrf_token%}
@@ -22,8 +38,16 @@ label{
     <input value="{{request.user.username}}" type="text" name="Author_name"> <br> <br>
     <label for="">Published Date</label>
     <input name=" Publish_date" type="date"> <br><br>
-    <label for=""> Blog Category</label>
-    <input name="Blog_category" type="text"> <br><br>
+    <label for="category"> Blog Category</label>
+    <select name="Blog_category" id="Blog_category">
+        <option value="Food">Food</option>
+        <option value="Nature">Nature</option>
+        <option value="Fashion">Fasion&style</option>
+        <option value="Travel">Travel</option>
+        <option value="Social">Social</option>
+        <option value="Business">Business</option>
+        <option value="Culture">Culture</option>
+    </select>
     <label for="">Caption</label>
     <textarea name="Blog_caption" id="" cols="30" rows="10"></textarea> <br><br>
     <label for="">Blog Image</label>
