--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Document</title>
+    <style>
+      .nav-link{
+    display: flex;
+    margin-left: 100px;
+    /* padding-left: 20px; */
+
+    
+}
+.btn-1{
+    margin-left: 100px;
+}
+.d-block{
+    width:50px;
+    height: 500px;
+}
+.container{
+    display: flex;
+    padding: 10vw;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    
+}
+.tech-card{
+    margin-top: 50px;
+    /* height: 100px; */
+}
+
+
+    </style>
 </head>
 <body>
   <div class="box">
@@ -24,9 +54,23 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="{%url 'view_blog' %}">Blog</a>
               <a class="nav-link active" aria-current="page" href="{%url 'first'%}">Home</a>
-              <a class="nav-link" href="{%url 'about'%}">about</a>
-              <a class="nav-link" href="{%url 'contact' %}">contact</a>
+              <a class="nav-link" href="{%url 'about'%}">About</a>
+              <a class="nav-link" href="{%url 'contact' %}">Contact</a>
               <a class="nav-link" href="{%url 'add_blog'%}">Add Blog</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Blog Catogories
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{%url 'category_view' 'Food'%}">Food</a></li>
+                  <li><a class="dropdown-item" href="{%url 'category_view' 'Nature'%}">Nature</a></li>
+                  <li><a class="dropdown-item" href="{%url 'category_view' 'Fashion'%}">Fasion&Style</a></li>
+                  <li><a class="dropdown-item" href="{%url 'category_view' 'Culture'%}">Culture </a></li>
+                  <li><a class="dropdown-item" href="{%url 'category_view' 'Social'%}">Social</a></li>
+                  <li><a class="dropdown-item" href="{%url 'category_view' 'Business'%}">Business</a></li>
+                  <li><a class="dropdown-item" href="{%url 'category_view' 'Travel'%}">Travel</a></li>
+                </ul>
+              </li>
               <button  class="btn-1" type="submit">
                 <a href="{%url 'signup'%}">signup</a> </button>
               
